# CMakeList.txt : CMake project for unionfind, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("unionfind")

# Add source to this project's executable.
add_executable (unionfind "unionfind.cpp" "unionfind.h")

# TODO: Add tests and install targets if needed.
